<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="add_contact">Add contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="delete_contact">Delete contact</string>
    <string name="delete_confirmation">Are you sure you want to delete this contact?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_email">Send email</string>
    <string name="emails">Emails</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="first_name">First name</string>
    <string name="save_contact">Save contact</string>
    <string name="postal_code">Postal code</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="street_name">Street name</string>
    <string name="street_number">Street #</string>
    <string name="address">Address</string>
    <string name="last_name">Last name</string>
    <string name="open_menu">Open menu</string>
    <string name="go_back_confirmation">Are you sure you want to go back? This might lose unsaved data.</string>
    <string name="exit_confirmation">Are you sure you want to exit the app? This might lose unsaved data.</string>
    <string name="view_confirmation">Are you sure you want to view another contact? This might lose unsaved data.</string>
    <string name="invalid_input">Invalid input</string>
    <string name="empty_field">Empty field</string>
    <string name="about_this_app">About this app</string>
    <string name="switch_to_light_mode">Switch to light mode</string>
    <string name="switch_to_night_mode">Switch to night mode</string>
    <string name="close">Close</string>
    <string name="author_info">Made by <a href="https://github.com/sylveon">Charles Milette</a></string>
    <string name="used_libraries">Using Room and Volley</string>
</resources>